# soluble

./: .brokignore  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pyproject.toml  .rstcheck.cfg  CONTRIBUTING.rst  LICENSE  README.md  README.rst  noxfile.py  pyproject.toml  setup.py
.github/workflows/: pre_commit.yml  test.yml
docs/: conf.py  index.rst  py-modindex.rst
docs/_includes/: modindex-note.rst  reference-toc-template.rst
docs/tutorial/: example.rst
github/workflows/: ci.yml
requirements/: base.txt  docs.txt  tests.in
requirements/py3.10/: tests.txt
requirements/py3.11/: tests.txt
requirements/py3.8/: tests.txt
requirements/py3.9/: tests.txt
soluble/: conf.py
soluble/soluble/: init.py  key.py  master.py  minion.py  ssh.py
src/soluble/: __main__.py  conf.py  scripts.py
src/soluble/salt/: key.py  repo.py  ssh.py
src/soluble/soluble/: init.py
src/soluble/soluble/contracts/: init.py
src/soluble_master/: conf.py
src/soluble_master/soluble/: master.py
src/soluble_minion/: conf.py
src/soluble_minion/soluble/: minion.py
tests/: conftest.py
tests/helpers/: cmd.py  container.py
tests/integration/: conftest.py
tests/integration/soluble/: test_init.py
tests/soluble/: test_init.py  test_master.py  test_minion.py
tests/unit/: conftest.py
tests/unit/soluble/: test_init.py
