[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soluble"
version = "2.0.0"
description = "Set up a dissolvable, ephemeral salt minion using salt-ssh"
readme = "README.rst"
url = "https://github.com/saltstack/soluble"
authors = [
    {name = "Tyler Levy Conde", email = "tyler.levy-conde@broadcomm.com"},
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.10"
dependencies = [
  "pop>=27.1.0",
  "distro",
  "salt-ssh",
  "importlib-metadata<5.0",
]
packages = ["soluble/**"]

[tool.hatch.build.targets.wheel]
packages = ["soluble"]

[project.optional-dependencies]
test = [
  "asynctest",
  "mock",
  "pytest>=6.2.5",
  "pytest-asyncio",
  "pytest-pop>=8.0",
]

# Specify console scripts
[project.scripts]
soluble = "soluble.scripts:start"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--tb native --full-trace --color=yes -vv"
asyncio_mode = "auto"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
  "hatchling",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:hatch_build_scripts tests}"
style = [
  "black --check --diff {args:.}",
]

fix = [
  "black {args:.}",
  "style",
]

all = [
  "style",
  "typing",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
)
'''
